# note-markdown

./: .gitignore  CLAUDE.md  Cargo.toml  MONOREPO_GUIDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.claude/: settings.local.json
_plans/: note-web-tray.md  rust-core-to-ts.md
_requirements/apps/: web-app-requirements.md
_requirements/core/: rust-core-to-ts.md
_specs/: TEMPLATE.md
_specs/apps/: web-app-spec.md
_specs/examples/: analytics-refactor.md  batches-schedule-autopilot.md  campagnes-ab-refactor.md  campagnes-refactor.md  following-and-follower-refactor.md  instagram-shared-business-rules.md
apps/note-markdown-client/: package.json
apps/note-markdown-sticky/: package.json
apps/note-web-tray/: package.json
apps/note-web-tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/note-web-tray/src-tauri/icons/: icon.icns
apps/note-web-tray/src-tauri/src/: lib.rs  main.rs  server.rs
apps/web-app/: index.html  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.mts
docs/: DESIGN_DOC.md  MOBILE_TWEAKS.md  TODOS.md
docs/plans/: architecture-improvements.md
note-markdown-client/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.mts
note-markdown-client/docs/: DESIGN_DOC.md  TODOS.md
note-markdown-client/src/: App.svelte  (+1 more)
note-markdown-client/src-tauri/: Cargo.toml  tauri.conf.json
note-markdown-client/src-tauri/src/: lib.rs  main.rs
note-markdown-sticky/: README.md  index.html  package.json  tsconfig.json  vite.config.mts
(+73 files in other folders)
