[package]
name = "note-markdown"
version = "0.1.0"
edition = "2021"

[lib]
name = "note_markdown"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
note-core = { path = "../../shared/note-core" }
note-tauri-commands = { path = "../../shared/note-tauri-commands" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
