[package]
name = "note-web-tray"
version = "0.1.0"
edition = "2021"

[lib]
name = "note_web_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
axum = "0.7"
tokio = { version = "1", features = ["net"] }
rust-embed = "8"
mime_guess = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
